docs: add NPM dependencies section to README
- List all production dependencies with versions and descriptions
- List all development dependencies with versions and descriptions
- Add linting section with commands

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "clean-api",
+  "name": "clinic-api",
   "version": "1.0.0",
-  "description": "Clean Architecture API with Node.js and TypeScript",
+  "description": "Clinic Management API with Node.js and TypeScript",
   "main": "dist/index.js",
   "scripts": {
     "dev": "ts-node src/index.ts",
