--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "clinic-api",
   "version": "1.0.0",
   "description": "Clinic Management API with Node.js and TypeScript",
